added folder, modified files, changed locations

--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,8 @@
 *.txt
 *.wpd
 *.wps
-*.html
 *.pyc
+# *.html
 
 ### VisualStudioCode ###
 .vscode/*
@@ -34,3 +34,4 @@
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/text,visualstudiocode
+Under_Develop/ignored_folder
