--- a/.gitignore
+++ b/.gitignore
@@ -167,3 +167,5 @@ fabric.properties
 # End of https://www.toptal.com/developers/gitignore/api/pycharm
 .venv
 Test-General
+/will not pass.mkv
+/will pass.mkv
